--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       }
       
       const [item, cls] = issueSelect.value.split(':');
-      const apiUrl = `https://osmose.openstreetmap.fr/api/0.3/issues.json?country=${encodeURIComponent(country)}&item=${encodeURIComponent(item)}&class=${encodeURIComponent(cls)}&limit=500&full=yes`;
+      const apiUrl = `https://osmose.openstreetmap.fr/api/0.3/issues.geojson?country=${encodeURIComponent(country)}&item=${encodeURIComponent(item)}&class=${encodeURIComponent(cls)}&limit=500`;
       
       fetch(apiUrl)
         .then(response => {
